# School-and-personal-project

./: README.md
Animation_clothes/Clothes_gpu/: CMakeLists.txt
Animation_clothes/Clothes_gpu/project/: gl-utils.cc  gl-utils.h  image.h  main.cc  tga.cc  vec2.h  vec4.h
Animation_clothes/Clothes_gpu/project/data/: normals.frag  positions.frag  speeds.frag  texture.tga
Animation_clothes/Clothes_part_2/: CMakeLists.txt
Animation_skinning/project/: CMakeCache.txt  Makefile
IrrlichtGame (Work in progress)/: Makefile  TEST.sln  TEST.vcxproj  TEST.vcxproj.filters  events.cpp  events.h  irrlicht-selection  main.cpp
IrrlichtGame (Work in progress)/Debug/: TEST.ilk
IrrlichtGame (Work in progress)/data/: Q3shw21 - read me.txt  credits.txt  readme.txt  ruin.txt  tris.md2
Project Ray_tracing/: Makefile  image.ppm
Project Ray_tracing/doc/: doxygen_config
Project Ray_tracing/src/: builded.sln  builded.vcxproj  builded.vcxproj.filters
marching-cubes/: Makefile  marching-cubes
marching-cubes/lib/: gl-utils.cpp  gl-utils.h  matrix.cpp  matrix.h  shader.cpp  shader.h  texture.cpp  tga.cpp  vec2.h
marching-cubes/shaders/: build_density.frag  build_density.frag~  build_density.geom  build_density.vert  gen_vertices.frag  gen_vertices.geom  gen_vertices.vert  gen_vertices.vert~  list_triangles.frag  list_triangles.geom  list_triangles.vert  render.frag  render.vert
marching-cubes/src/: main.cpp  marching_cubes.cpp  marching_cubes.h
parallax/: Makefile  Makefile~  parallax
tp_skinning/: CMakeLists.txt  cmake_install.cmake  pgm  pgm.cbp  ui_mainwindow.h
(+86 files in other folders)
